syntax = "proto3";

package ibc_query.v1;

option go_package = "github.com/cosmos/interchain-queries/x/ibc_query/types";

import "google/api/annotations.proto";
import "ibc_query/v1/crosschainquery.proto";

// Query
service Query {
  // query CrossChainQueryResult
  rpc CrossChainQueryResult(QueryCrossChainQueryResult)
      returns (QueryCrossChainQueryResultResponse) {
    option (google.api.http).get = "/ibc/apps/ibc_query/v1/{id}";
  }
}

// QueryCrossChainQuery
message QueryCrossChainQueryResult {
  // query id
  string id = 1;
}

// QueryCrossChainQueryResponse
message QueryCrossChainQueryResultResponse {
  string id = 1;
  QueryResult result = 2;
  bytes data = 3;
}
